Add authentication component and update routing; disable CLI analytics

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,9 @@
           <a routerLink="/recipes" class="nav-link">Recipes</a>
         </li>
         <li class="nav-item" routerLinkActive="active-link">
+          <a routerLink="/auth" class="nav-link">Authentication</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active-link">
           <a routerLink="/shopping-list" class="nav-link">Shopping List</a>
         </li>
       </ul>
